--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "core-js": "^3.6.4",
     "tailwindcss": "^1.2.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue2-touch-events": "^2.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
