--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "core-js": "^3.6.4",
+    "jspdf": "^1.5.3",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
     "vue2-touch-events": "^2.2.1"
