--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "core-js": "^3.6.4",
     "jspdf": "^1.5.3",
+    "register-service-worker": "^1.6.2",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
     "vue2-touch-events": "^2.2.1"
@@ -18,10 +19,12 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
+    "@vue/cli-plugin-pwa": "^4.2.3",
     "@vue/cli-service": "^4.2.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "vue-cli-plugin-pwa": "^1.0.0-alpha.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
