--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "register-service-worker": "^1.6.2",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
-    "vue2-touch-events": "^2.2.1"
+    "vue2-touch-events": "^2.2.1",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
